tests/compile_fail/unknown_return_attr.stderr
error: unknown return attribute 'unknown_return_attr'. Valid attributes are: const, ref, handle, variable, type, template
  --> tests/compile_fail/unknown_return_attr.rs:10:15
   |
10 |     #[returns(unknown_return_attr)]
   |               ^^^^^^^^^^^^^^^^^^^
